--- a/public_html/css/site_header.css
+++ b/public_html/css/site_header.css
@@ -244,14 +244,11 @@
 .inputForm{
   display: block;
   width: 100%;
+  margin: 10px auto -1px;
   font-size: 16px;
-  border: #999 solid 1px;
-  border-radius: 4px;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+  border: #ccc solid 1px;
   background-color: #fff;
   -webkit-appearance: none;
-  margin-bottom: 8px;
 }
 
 .inputForm input[type="text"]{
@@ -476,7 +473,6 @@
 
 .mdSearch ul{
   border: #ccc solid 1px;
-  border-bottom: 0;
 }
 
 .mdSearch ul:after{
@@ -489,7 +485,7 @@
   float: left;
   width: 50%;
   height: 40px;
-  background-color: #fff;
+  background-color: #eee;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -554,17 +550,8 @@ body.hdNoFixed{
 }
 
 .hdNoFixed .mdNavigation.active{
-  height: 330px;
+  height: 270px;
 }
-
-.hdNoFixed .isLogin .mdNavigation.active{
-  height: 356px;
-}
-
-.hdNoFixed .isLogin.isPremium .mdNavigation.active{
-  height: 300px;
-}
-
 
 /* override */
 .sitemap .header{
@@ -606,4 +593,40 @@ body.hdNoFixed{
 
 .headerButton.premium.adjust{
   width: 60%;
+}
+
+/*-----*/
+
+.hotWords{
+  width: 96%;
+  margin: 10px auto 0;
+}
+
+.hotWords li{
+  display: inline;
+  line-height: 1.4;
+  padding-right: 10px;
+  border-right: 1px dotted #000;
+}
+
+.hotWords li:first-child{
+  float: left;
+  height: 2em;
+  margin-right: 10px;
+  padding-right: 0;
+  font-weight: bold;
+  border: none;
+}
+
+.hdSearchBox{
+  width: 96%;
+  margin: 0 auto;
+}
+
+.searchNavOther li{
+  width: 50%;
+  display: inline;
+  float: left;
+  padding: 6px;
+  border: 1px solid;
 }
