ランキングの改行改修

--- a/public_html/css/common.less
+++ b/public_html/css/common.less
@@ -4357,8 +4357,9 @@ hr{
 						.itemCountList{
 							li{
 								color: #fff;
-								margin-right: 3px;
+								margin-right: 1px;
 								padding: 3px 5px;
+								font-size: 10px;
 								background: #a1a1a1;
 								border-radius: 3px;
 							}
