--- a/public_html/css/common.css
+++ b/public_html/css/common.css
@@ -3830,8 +3830,9 @@ hr {
 }
 .ranking ol li .itemBlk .itemBlkInner .itemInfo .itemCountList li {
   color: #fff;
-  margin-right: 3px;
+  margin-right: 1px;
   padding: 3px 5px;
+  font-size: 10px;
   background: #a1a1a1;
   border-radius: 3px;
 }
