--- a/public_html/css/common.less
+++ b/public_html/css/common.less
@@ -4307,6 +4307,7 @@ hr{
 		.hotOnAirMeta{
 			position: static;
 			margin-top: -5px;
+			height: 110px;
 		}
 	}
 	a.hotOnAirS+a{
@@ -4357,7 +4358,7 @@ hr{
 						.itemCountList{
 							li{
 								color: #fff;
-								margin-right: 1px;
+								margin:0 1px 1px 0;
 								padding: 3px 5px;
 								font-size: 10px;
 								background: #a1a1a1;
