カテゴリ、アニメのところだけうまくいかないの修正

--- a/public_html/css/common.less
+++ b/public_html/css/common.less
@@ -3104,6 +3104,10 @@ td.contents2TxtBlue2{
 	margin-top: 2px;
 }
 
+.culture{
+	float: left;
+}
+
 .blomagaLink {
 	background: url(/img/common/icon_blog.png) no-repeat;
 	background-position: 5px 5px;
