--- a/public_html/css/common.css
+++ b/public_html/css/common.css
@@ -2682,6 +2682,9 @@ td.contents2TxtBlue2 {
   display: inline-block;
   margin-top: 2px;
 }
+.culture {
+  float: left;
+}
 .blomagaLink {
   background: url(/img/common/icon_blog.png) no-repeat;
   background-position: 5px 5px;
