--- a/public_html/css/common.less
+++ b/public_html/css/common.less
@@ -3104,8 +3104,10 @@ td.contents2TxtBlue2{
 	margin-top: 2px;
 }
 
-.culture{
+.column2 li span:nth-child(5th) {
+	display: inline-block;
 	float: left;
+	margin-top: 2px;
 }
 
 .blomagaLink {
