--- a/public_html/css/common.css
+++ b/public_html/css/common.css
@@ -3182,24 +3182,28 @@ div.siteFooterBtn p {
   margin-right: 0;
 }
 .itemCountList .icons:before {
+  position: relative;
+  top: 1px;
   display: inline-block;
   content: "";
   height: 10px;
-  margin-right: 4px;
   background-repeat: no-repeat;
-  background-position: left center;
 }
-.itemCountList .icons.viewCount:before {
-  width: 9px;
-  background-image: url(../img/index/icon_1.png);
+.viewCount:before,
+.commentCount:before,
+.mylistCount:before {
+  width: 15px;
+  background-image: url(../img/index/rank_info.png);
+  background-repeat: no-repeat;
 }
-.itemCountList .icons.commentCount:before {
-  width: 14px;
-  background-image: url(../img/index/icon_2.png);
+.viewCount:before {
+  background-position: 0 0;
 }
-.itemCountList .icons.mylistCount:before {
-  width: 11px;
-  background-image: url(../img/index/icon_3.png);
+.commentCount:before {
+  background-position: 0 -60px;
+}
+.mylistCount:before {
+  background-position: 0 -120px;
 }
 .itemNum {
   color: #cb5a5a;
